--- a/Gems/MotionMatching/JupyterNotebooks/FeatureAnalysis.ipynb
+++ b/Gems/MotionMatching/JupyterNotebooks/FeatureAnalysis.ipynb
@@ -330,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -344,7 +344,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "64e2c40b1e2e5187dbc581262b84e05636cbc152dfd1c72af75c368d3284d05b"
+   }
   }
  },
  "nbformat": 4,
