Fix onnx gem and add onnx inferencing in motion matching instance.
Signed-off-by: Kuba Ciukiewicz <108667365+kubciu@users.noreply.github.com>

--- a/Gems/MotionMatching/JupyterNotebooks/LearnedMotionMatching.ipynb
+++ b/Gems/MotionMatching/JupyterNotebooks/LearnedMotionMatching.ipynb
@@ -129,7 +129,7 @@
     "else:\n",
     "    PrintRed(\"Frame numbers do not match!\")\n",
     "\n",
-    "dataFeatures.head(15)"
+    "dataFeatures.head(50)"
    ]
   },
   {
@@ -172,36 +172,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "# from sklearn import preprocessing\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "posRotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "dataPosRotModelSpaceScaled = posRotModelSpaceDataScaler.fit_transform(dataPosRotModelSpace.values)\n",
+    "# posRotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "# dataPosRotModelSpaceScaled = posRotModelSpaceDataScaler.fit_transform(dataPosRotModelSpace.values)\n",
     "\n",
-    "rotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "dataRotModelSpaceScaled = rotModelSpaceDataScaler.fit_transform(dataRotModelSpace.values)\n",
+    "# rotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "# dataRotModelSpaceScaled = rotModelSpaceDataScaler.fit_transform(dataRotModelSpace.values)\n",
     "\n",
-    "posRotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "dataPosRotLocalSpaceScaled = posRotLocalSpaceDataScaler.fit_transform(dataPosRotLocalSpace.values)\n",
+    "# posRotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "# dataPosRotLocalSpaceScaled = posRotLocalSpaceDataScaler.fit_transform(dataPosRotLocalSpace.values)\n",
     "\n",
-    "rotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "dataRotLocalSpaceScaled = rotLocalSpaceDataScaler.fit_transform(dataRotLocalSpace.values)\n",
+    "# rotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "# dataRotLocalSpaceScaled = rotLocalSpaceDataScaler.fit_transform(dataRotLocalSpace.values)\n",
     "\n",
-    "featureDataScaler = preprocessing.StandardScaler()\n",
-    "dataFeaturesScaled = featureDataScaler.fit_transform(dataFeatures.values)\n",
+    "# featureDataScaler = preprocessing.StandardScaler()\n",
+    "# dataFeaturesScaled = featureDataScaler.fit_transform(dataFeatures.values)\n",
+    "\n",
+    "# # Input (Pose + Features)\n",
+    "# inputPoseData = np.delete(dataPosRotLocalSpaceScaled, -1, axis=0) # remove last frame\n",
+    "# inputFeatureData = np.delete(dataFeaturesScaled, -1, axis=0) # remove last frame\n",
+    "# print(inputPoseData.shape)\n",
+    "# print(inputFeatureData.shape)\n",
+    "# data_input = np.concatenate((inputPoseData, inputFeatureData), axis=1) # concatenate horizontally\n",
+    "# print(data_input.shape)\n",
+    "\n",
+    "# # Output (Next pose)\n",
+    "# data_output = dataRotLocalSpaceScaled\n",
+    "# data_output = np.delete(data_output, 0, axis=0) # remove first frame\n",
+    "# print(data_output.shape)\n",
     "\n",
     "# Input (Pose + Features)\n",
-    "inputPoseData = np.delete(dataPosRotLocalSpaceScaled, -1, axis=0) # remove last frame\n",
-    "inputFeatureData = np.delete(dataFeaturesScaled, -1, axis=0) # remove last frame\n",
+    "inputPoseData = np.delete(dataPosRotModelSpace.values, -1, axis=0) # remove last frame\n",
+    "inputFeatureData = np.delete(dataFeatures.values, -1, axis=0) # remove last frame\n",
     "print(inputPoseData.shape)\n",
     "print(inputFeatureData.shape)\n",
     "data_input = np.concatenate((inputPoseData, inputFeatureData), axis=1) # concatenate horizontally\n",
     "print(data_input.shape)\n",
     "\n",
     "# Output (Next pose)\n",
-    "data_output = dataRotLocalSpaceScaled\n",
+    "data_output = dataRotLocalSpace.values\n",
     "data_output = np.delete(data_output, 0, axis=0) # remove first frame\n",
     "print(data_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955f0eba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert Pandas DataFrames to PyTorch tensors\n",
+    "X = torch.tensor(data_input, dtype=torch.float32)\n",
+    "y = torch.tensor(data_output, dtype=torch.float32)"
    ]
   },
   {
@@ -430,21 +455,8 @@
     "Training(model, train_loader, test_loader, optimizer)\n",
     "\n",
     "# Export the trained model to an ONNX file\n",
-    "filename = folderPath + 'OnnxModel_PosRotFeatureLocal_To_RotLocal.onnx'\n",
+    "filename = folderPath + 'OnnxModel_PosRotFeatureLocal_To_RotLocal_Unnormalized.onnx'\n",
     "ExportModelToOnnx(model, filename, X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82853b9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import onnx\n",
-    "\n",
-    "onnx_model = onnx.load(\"D:/OnnxModel_PosRotFeatureLocal_To_RotLocal.onnx\")\n",
-    "onnx.checker.check_model(onnx_model)"
    ]
   },
   {
@@ -456,7 +468,7 @@
    "source": [
     "import onnxruntime\n",
     "\n",
-    "ort_session = onnxruntime.InferenceSession(\"D:/OnnxModel_PosRotFeatureLocal_To_RotLocal.onnx\")\n",
+    "ort_session = onnxruntime.InferenceSession(\"D:/OnnxModel_PosRotFeatureModel_To_RotLocal_Unnormalized.onnx\")\n",
     "\n",
     "# compute ONNX Runtime output prediction\n",
     "# ort_input = {\"input\": [X[0].numpy()]}\n",
@@ -497,16 +509,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdae46eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ort_outs[0][25][25]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "referencePoses = dataRotLocalSpaceScaled\n",
+    "referencePoses = dataRotLocalSpace.values\n",
     "referencePoses"
    ]
   },
@@ -531,9 +533,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = np.empty(len(dataPosesOriginal))\n",
-    "for i in range(len(dataPosesOriginal)):\n",
-    "    l1[i] = np.linalg.norm((dataPosesOriginal[i] - referencePoses[i + 1]), ord=1)\n",
+    "l1 = np.empty(len(ort_outs[0]))\n",
+    "for i in range(len(ort_outs[0])):\n",
+    "    l1[i] = np.linalg.norm((ort_outs[0][i] - referencePoses[i + 1]), ord=1)\n",
     "print(\"Avg L1: \" + str(np.average(l1)))\n",
     "plt.figure(figsize=(20,10))\n",
     "plt.plot(l1)\n",
@@ -547,9 +549,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2 = np.empty(len(dataPosesOriginal))\n",
-    "for i in range(len(dataPosesOriginal)):\n",
-    "    l2[i] = np.linalg.norm((dataPosesOriginal[i] - referencePoses[i + 1]))\n",
+    "l2 = np.empty(len(ort_outs[0]))\n",
+    "for i in range(len(ort_outs[0])):\n",
+    "    l2[i] = np.linalg.norm((ort_outs[0][i] - referencePoses[i + 1]))\n",
     "print(\"Avg L2: \" + str(np.average(l2)))\n",
     "plt.figure(figsize=(20,10))\n",
     "plt.plot(l2)\n",
@@ -563,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finalPoses = pd.DataFrame(dataPosesOriginal, columns=dataRotLocalSpace.columns.values)\n",
+    "finalPoses = pd.DataFrame(ort_outs[0], columns=dataRotLocalSpace.columns.values)\n",
     "finalPoses"
    ]
   },
@@ -574,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finalPoses.to_csv(\"D:/InferencedPoses_PosRotFeatureLocal_To_RotLocal.csv\", index=False)"
+    "finalPoses.to_csv(\"D:/InferencedPoses_PosRotFeatureLocal_To_RotLocal_Unnormalized.csv\", index=False)"
    ]
   },
   {
@@ -624,7 +626,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('Python39')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -642,7 +644,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "9c73e790938bd3582c17bb1a3c4b3aa5e6fd04d86c86356c0c7a8763f89d5096"
+    "hash": "64e2c40b1e2e5187dbc581262b84e05636cbc152dfd1c72af75c368d3284d05b"
    }
   }
  },
