Notebook updates to optimize model. Recording outputs rotations only file.
Signed-off-by: Kuba Ciukiewicz <108667365+kubciu@users.noreply.github.com>

--- a/Gems/MotionMatching/JupyterNotebooks/LearnedMotionMatching.ipynb
+++ b/Gems/MotionMatching/JupyterNotebooks/LearnedMotionMatching.ipynb
@@ -147,14 +147,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recording_poses = LoadData(folderPath + 'RuntimeRecording_Poses.csv', \"Frames\", \"PoseComponents\")\n",
-    "recording_features = LoadData(folderPath + 'RuntimeRecording_Features.csv', \"Frames\", \"FeatureComponents\")\n",
-    "recording_bestMatchFrames = LoadData(folderPath + 'RuntimeRecording_BestMatchingFrames.csv', \"Frames\", \"BestMatchingFrameComponents\")\n",
+    "recording_poses = LoadData(folderPath + 'ReallyLongRuntimeRecordings/RuntimeRecording_Poses.csv', \"Frames\", \"PoseComponents\")\n",
+    "recording_rotations = LoadData(folderPath + 'ReallyLongRuntimeRecordings/RuntimeRecording_Rotations.csv', \"Frames\", \"RotationComponents\")\n",
+    "recording_features = LoadData(folderPath + 'ReallyLongRuntimeRecordings/RuntimeRecording_Features.csv', \"Frames\", \"FeatureComponents\")\n",
+    "recording_bestMatchFrames = LoadData(folderPath + 'ReallyLongRuntimeRecordings/RuntimeRecording_BestMatchingFrames.csv', \"Frames\", \"BestMatchingFrameComponents\")\n",
     "\n",
-    "if (recording_poses.shape[0] == recording_features.shape[0] == recording_bestMatchFrames.shape[0]):\n",
+    "if (recording_poses.shape[0] == recording_rotations.shape[0] == recording_features.shape[0] == recording_bestMatchFrames.shape[0]):\n",
     "    PrintGreen(\"Frame numbers match.\")\n",
     "else:\n",
     "    PrintRed(\"Frame numbers do not match!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce740cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recordingPoseData = np.delete(recording_poses.values, -1, axis=0) # remove last frame\n",
+    "recordingFeatureData = np.delete(recording_features.values, -1, axis=0) # remove last frame\n",
+    "print(recordingPoseData.shape)\n",
+    "print(recordingFeatureData.shape)\n",
+    "recording_input = np.concatenate((recordingPoseData, recordingFeatureData), axis=1) # concatenate horizontally\n",
+    "print(recording_input.shape)\n",
+    "\n",
+    "recordingOutputPoseData = np.delete(recording_rotations.values, 0, axis=0)\n",
+    "print(recordingOutputPoseData.shape)\n"
    ]
   },
   {
@@ -204,17 +223,74 @@
     "# print(data_output.shape)\n",
     "\n",
     "# Input (Pose + Features)\n",
-    "inputPoseData = np.delete(dataPosRotModelSpace.values, -1, axis=0) # remove last frame\n",
-    "inputFeatureData = np.delete(dataFeatures.values, -1, axis=0) # remove last frame\n",
-    "print(inputPoseData.shape)\n",
-    "print(inputFeatureData.shape)\n",
-    "data_input = np.concatenate((inputPoseData, inputFeatureData), axis=1) # concatenate horizontally\n",
+    "# inputPoseData = np.delete(dataPosRotLocalSpace.values, -1, axis=0) # remove last frame\n",
+    "# inputFeatureData = np.delete(dataFeatures.values, -1, axis=0) # remove last frame\n",
+    "# print(inputPoseData.shape)\n",
+    "# print(inputFeatureData.shape)\n",
+    "# data_input = np.concatenate((inputPoseData, inputFeatureData), axis=1) # concatenate horizontally\n",
+    "# print(data_input.shape)\n",
+    "\n",
+    "# # Output (Next pose)\n",
+    "# outputPoseData = np.delete(dataRotLocalSpace.values, 0, axis=0)\n",
+    "# # outputFeatureData = np.delete(dataFeatures.values, 0, axis=0)\n",
+    "# # print(outputPoseData.shape)\n",
+    "# # print(outputFeatureData.shape)\n",
+    "# # data_output = np.concatenate((outputPoseData, outputFeatureData), axis=1) # concatenate horizontally\n",
+    "# data_output = outputPoseData\n",
+    "# print(data_output.shape)\n",
+    "\n",
+    "# data_input = np.concatenate((data_input, recording_input), axis=0)\n",
+    "# print(data_input.shape)\n",
+    "\n",
+    "# data_output = np.concatenate((data_output, recordingOutputPoseData), axis=0)\n",
+    "# print(data_output.shape)\n",
+    "\n",
+    "data_input = recording_input\n",
     "print(data_input.shape)\n",
     "\n",
-    "# Output (Next pose)\n",
-    "data_output = dataRotLocalSpace.values\n",
-    "data_output = np.delete(data_output, 0, axis=0) # remove first frame\n",
+    "data_output = recordingOutputPoseData\n",
     "print(data_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff63f44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def GetBadFrames(frameData):\n",
+    "    sum_square_diff = np.empty(len(frameData)-1)\n",
+    "    badFrames = []\n",
+    "    for i in range(1, len(frameData)):\n",
+    "        sum_square_diff[i-1] = np.linalg.norm((frameData[i] - frameData[i-1]))\n",
+    "        if sum_square_diff[i-1] > 4:\n",
+    "            badFrames.append(i-1)\n",
+    "    plt.figure(figsize=(20,10))\n",
+    "    plt.plot(sum_square_diff)\n",
+    "    plt.show\n",
+    "    return badFrames\n",
+    "\n",
+    "inputFrameData = data_input\n",
+    "badFrames = GetBadFrames(inputFrameData)\n",
+    "print(len(badFrames))\n",
+    "\n",
+    "data_input = np.delete(data_input, badFrames, axis=0)\n",
+    "data_output = np.delete(data_output, badFrames, axis=0)\n",
+    "print(len(data_input))\n",
+    "print(len(data_output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7a5501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(data_input)"
    ]
   },
   {
@@ -224,9 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert Pandas DataFrames to PyTorch tensors\n",
-    "X = torch.tensor(data_input, dtype=torch.float32)\n",
-    "y = torch.tensor(data_output, dtype=torch.float32)"
+    "# # Convert Pandas DataFrames to PyTorch tensors\n",
+    "# X = torch.tensor(data_input, dtype=torch.float32)\n",
+    "# y = torch.tensor(data_output, dtype=torch.float32)"
    ]
   },
   {
@@ -275,7 +351,7 @@
     "torch.manual_seed(42)\n",
     "\n",
     "def ConstructModel(inputFeatures, outputFeatures):\n",
-    "    hidden_layer = 1024\n",
+    "    hidden_layer = 512\n",
     "    model = nn.Sequential(nn.Linear(inputFeatures, hidden_layer),\n",
     "                          nn.ReLU(),\n",
     "                          #nn.Dropout(0.1), # probability of an element to be zeroed. Default: 0.5\n",
@@ -348,12 +424,38 @@
    "outputs": [],
    "source": [
     "# Settings\n",
-    "learning_rate = 1e-4\n",
+    "learning_rate = 1e-3\n",
     "weight_decay = 1e-5\n",
     "epochs = 3\n",
     "loss_function = nn.MSELoss()\n",
-    "mini_batch_size = 16\n",
+    "mini_batch_size = 32\n",
     "# Note: Optimizer can be changed in the code below (as it needs the model parameters it can't be done here)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b538d8ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def loss_function(input, target):\n",
+    "#     total = 0\n",
+    "#     for batch_index in range(len(input)):\n",
+    "#         diff = input[batch_index] - target[batch_index]\n",
+    "#         for i in range(1098, 1157):\n",
+    "#             diff[i] *= 10\n",
+    "#         total += (diff**2).mean()\n",
+    "#     return total\n",
+    "\n",
+    "# def loss_function(input, target):\n",
+    "#     total = 0\n",
+    "#     for batch_index in range(len(input)):\n",
+    "#         diff = (input[batch_index] - target[batch_index])**2\n",
+    "#         for i in range(1098, 1157):\n",
+    "#             diff[i] *= 20\n",
+    "#         total += diff.mean()\n",
+    "#     return total"
    ]
   },
   {
@@ -363,6 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from random import shuffle\n",
     "from torch.utils.data import Dataset\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -421,13 +524,16 @@
     "            print_each = 100\n",
     "            if current_mini_batch % print_each == print_each - 1:\n",
     "                averaged_loss = running_loss / print_each\n",
-    "                print(\"Loss after mini-batch %5d: %.3f\" % (current_mini_batch + 1, averaged_loss))\n",
+    "                print(\"Loss after mini-batch %5d: %.5f\" % (current_mini_batch + 1, averaged_loss))\n",
     "                tensorBoardWriter.add_scalar(timeCode + \" Running loss / train\", averaged_loss, current_mini_batch)\n",
     "                losses.append(averaged_loss)\n",
     "                running_loss = 0.0\n",
     "\n",
     "            current_mini_batch = current_mini_batch + 1\n",
     "\n",
+    "\n",
+    "    lossData = pd.DataFrame(losses)\n",
+    "    lossData.to_csv(\"D:/OnnxModelLosses_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.csv\", index=False)\n",
     "    plt.plot(losses)\n",
     "    plt.ylabel('loss')\n",
     "    plt.xlabel('mini-batch')\n",
@@ -444,8 +550,8 @@
     "\n",
     "# Construct the PyTorch dataset and data loaders\n",
     "torchDataset = CreatePytorchDataset(X, y)\n",
-    "train_loader = torch.utils.data.DataLoader(torchDataset, batch_size=mini_batch_size)\n",
-    "test_loader = torch.utils.data.DataLoader(torchDataset, batch_size=mini_batch_size)\n",
+    "train_loader = torch.utils.data.DataLoader(torchDataset, batch_size=mini_batch_size, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(torchDataset, batch_size=mini_batch_size, shuffle=True)\n",
     "\n",
     "# Construct the model and optimizer and train the model\n",
     "inputFeatures = X.shape[1]\n",
@@ -455,7 +561,7 @@
     "Training(model, train_loader, test_loader, optimizer)\n",
     "\n",
     "# Export the trained model to an ONNX file\n",
-    "filename = folderPath + 'OnnxModel_PosRotFeatureLocal_To_RotLocal_Unnormalized.onnx'\n",
+    "filename = folderPath + 'OnnxModel_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.onnx'\n",
     "ExportModelToOnnx(model, filename, X)"
    ]
   },
@@ -468,10 +574,11 @@
    "source": [
     "import onnxruntime\n",
     "\n",
-    "ort_session = onnxruntime.InferenceSession(\"D:/OnnxModel_PosRotFeatureModel_To_RotLocal_Unnormalized.onnx\")\n",
+    "ort_session = onnxruntime.InferenceSession(\"D:/OnnxModel_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.onnx\")\n",
     "\n",
     "# compute ONNX Runtime output prediction\n",
     "# ort_input = {\"input\": [X[0].numpy()]}\n",
+    "X = torch.tensor(np.concatenate((dataPosRotLocalSpace.values, dataFeatures.values), axis=1), dtype=torch.float32)\n",
     "ort_input = {\"input\": X.numpy()}\n",
     "ort_outs = ort_session.run(None, ort_input)"
    ]
@@ -509,20 +616,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataPosesOriginal = rotLocalSpaceDataScaler.inverse_transform(ort_outs[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "180cbad1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# referencePoses = np.concatenate((dataRotLocalSpace.values, dataFeatures.values), axis=1)\n",
     "referencePoses = dataRotLocalSpace.values\n",
+    "# referencePoses = dataRotLocalSpace.values\n",
     "referencePoses"
    ]
   },
@@ -533,8 +633,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = np.empty(len(ort_outs[0]))\n",
-    "for i in range(len(ort_outs[0])):\n",
+    "l1 = np.empty(len(ort_outs[0])-1)\n",
+    "for i in range(len(ort_outs[0])-1):\n",
     "    l1[i] = np.linalg.norm((ort_outs[0][i] - referencePoses[i + 1]), ord=1)\n",
     "print(\"Avg L1: \" + str(np.average(l1)))\n",
     "plt.figure(figsize=(20,10))\n",
@@ -549,8 +649,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2 = np.empty(len(ort_outs[0]))\n",
-    "for i in range(len(ort_outs[0])):\n",
+    "l2 = np.empty(len(ort_outs[0])-1)\n",
+    "for i in range(len(ort_outs[0])-1):\n",
     "    l2[i] = np.linalg.norm((ort_outs[0][i] - referencePoses[i + 1]))\n",
     "print(\"Avg L2: \" + str(np.average(l2)))\n",
     "plt.figure(figsize=(20,10))\n",
@@ -576,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finalPoses.to_csv(\"D:/InferencedPoses_PosRotFeatureLocal_To_RotLocal_Unnormalized.csv\", index=False)"
+    "finalPoses.to_csv(\"D:/InferencedPoses_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.csv\", index=False)"
    ]
   },
   {
