Add Learned Motion Matching training notebooks and modify MotionMatchingInstance.cpp to inference projector -> stepper -> decompressor sequence.
Signed-off-by: Kuba Ciukiewicz <108667365+kubciu@users.noreply.github.com>

--- a/Gems/MotionMatching/JupyterNotebooks/LearnedMotionMatching.ipynb
+++ b/Gems/MotionMatching/JupyterNotebooks/LearnedMotionMatching.ipynb
@@ -191,36 +191,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn import preprocessing\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# posRotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "# dataPosRotModelSpaceScaled = posRotModelSpaceDataScaler.fit_transform(dataPosRotModelSpace.values)\n",
+    "posRotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "dataPosRotModelSpaceScaled = posRotModelSpaceDataScaler.fit_transform(dataPosRotModelSpace.values)\n",
     "\n",
-    "# rotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "# dataRotModelSpaceScaled = rotModelSpaceDataScaler.fit_transform(dataRotModelSpace.values)\n",
+    "rotModelSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "dataRotModelSpaceScaled = rotModelSpaceDataScaler.fit_transform(dataRotModelSpace.values)\n",
     "\n",
-    "# posRotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "# dataPosRotLocalSpaceScaled = posRotLocalSpaceDataScaler.fit_transform(dataPosRotLocalSpace.values)\n",
+    "posRotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "dataPosRotLocalSpaceScaled = posRotLocalSpaceDataScaler.fit_transform(dataPosRotLocalSpace.values)\n",
     "\n",
-    "# rotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
-    "# dataRotLocalSpaceScaled = rotLocalSpaceDataScaler.fit_transform(dataRotLocalSpace.values)\n",
+    "rotLocalSpaceDataScaler = preprocessing.StandardScaler()\n",
+    "dataRotLocalSpaceScaled = rotLocalSpaceDataScaler.fit_transform(dataRotLocalSpace.values)\n",
     "\n",
-    "# featureDataScaler = preprocessing.StandardScaler()\n",
-    "# dataFeaturesScaled = featureDataScaler.fit_transform(dataFeatures.values)\n",
+    "featureDataScaler = preprocessing.StandardScaler()\n",
+    "dataFeaturesScaled = featureDataScaler.fit_transform(dataFeatures.values)\n",
     "\n",
-    "# # Input (Pose + Features)\n",
-    "# inputPoseData = np.delete(dataPosRotLocalSpaceScaled, -1, axis=0) # remove last frame\n",
-    "# inputFeatureData = np.delete(dataFeaturesScaled, -1, axis=0) # remove last frame\n",
-    "# print(inputPoseData.shape)\n",
-    "# print(inputFeatureData.shape)\n",
-    "# data_input = np.concatenate((inputPoseData, inputFeatureData), axis=1) # concatenate horizontally\n",
-    "# print(data_input.shape)\n",
+    "# Input (Pose + Features)\n",
+    "inputPoseData = np.delete(dataPosRotModelSpaceScaled, -1, axis=0) # remove last frame\n",
+    "inputPoseData2 = np.delete(dataPosRotLocalSpaceScaled, -1, axis=0) # remove last frame\n",
+    "inputFeatureData = np.delete(dataFeaturesScaled, -1, axis=0) # remove last frame\n",
+    "print(inputPoseData.shape)\n",
+    "print(inputFeatureData.shape)\n",
+    "data_input = np.concatenate((inputPoseData, inputFeatureData), axis=1) # concatenate horizontally\n",
+    "print(data_input.shape)\n",
     "\n",
-    "# # Output (Next pose)\n",
-    "# data_output = dataRotLocalSpaceScaled\n",
-    "# data_output = np.delete(data_output, 0, axis=0) # remove first frame\n",
-    "# print(data_output.shape)\n",
+    "# Output (Next pose)\n",
+    "data_output = dataRotLocalSpaceScaled\n",
+    "data_output = np.delete(data_output, 0, axis=0) # remove first frame\n",
+    "print(data_output.shape)\n",
     "\n",
     "# Input (Pose + Features)\n",
     "# inputPoseData = np.delete(dataPosRotLocalSpace.values, -1, axis=0) # remove last frame\n",
@@ -245,11 +246,11 @@
     "# data_output = np.concatenate((data_output, recordingOutputPoseData), axis=0)\n",
     "# print(data_output.shape)\n",
     "\n",
-    "data_input = recording_input\n",
-    "print(data_input.shape)\n",
+    "# data_input = recording_input\n",
+    "# print(data_input.shape)\n",
     "\n",
-    "data_output = recordingOutputPoseData\n",
-    "print(data_output.shape)"
+    "# data_output = recordingOutputPoseData\n",
+    "# print(data_output.shape)"
    ]
   },
   {
@@ -266,7 +267,7 @@
     "    badFrames = []\n",
     "    for i in range(1, len(frameData)):\n",
     "        sum_square_diff[i-1] = np.linalg.norm((frameData[i] - frameData[i-1]))\n",
-    "        if sum_square_diff[i-1] > 4:\n",
+    "        if sum_square_diff[i-1] > 11:\n",
     "            badFrames.append(i-1)\n",
     "    plt.figure(figsize=(20,10))\n",
     "    plt.plot(sum_square_diff)\n",
@@ -351,7 +352,7 @@
     "torch.manual_seed(42)\n",
     "\n",
     "def ConstructModel(inputFeatures, outputFeatures):\n",
-    "    hidden_layer = 512\n",
+    "    hidden_layer = 1024\n",
     "    model = nn.Sequential(nn.Linear(inputFeatures, hidden_layer),\n",
     "                          nn.ReLU(),\n",
     "                          #nn.Dropout(0.1), # probability of an element to be zeroed. Default: 0.5\n",
@@ -424,11 +425,11 @@
    "outputs": [],
    "source": [
     "# Settings\n",
-    "learning_rate = 1e-3\n",
+    "learning_rate = 1e-4\n",
     "weight_decay = 1e-5\n",
-    "epochs = 3\n",
+    "epochs = 6\n",
     "loss_function = nn.MSELoss()\n",
-    "mini_batch_size = 32\n",
+    "mini_batch_size = 16\n",
     "# Note: Optimizer can be changed in the code below (as it needs the model parameters it can't be done here)"
    ]
   },
@@ -533,7 +534,7 @@
     "\n",
     "\n",
     "    lossData = pd.DataFrame(losses)\n",
-    "    lossData.to_csv(\"D:/OnnxModelLosses_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.csv\", index=False)\n",
+    "    lossData.to_csv(\"D:/OnnxModelLosses_PosRotFeaturesWithHandAndHeadModel_To_RotLocal_Normalized_NoBadFrames_Shuffled_LR1e-4_Batch16_Hidden1024_WeightDecay1e-5_Epochs6_NormalizeDataOn_Threshold10.csv\", index=False)\n",
     "    plt.plot(losses)\n",
     "    plt.ylabel('loss')\n",
     "    plt.xlabel('mini-batch')\n",
@@ -561,7 +562,7 @@
     "Training(model, train_loader, test_loader, optimizer)\n",
     "\n",
     "# Export the trained model to an ONNX file\n",
-    "filename = folderPath + 'OnnxModel_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.onnx'\n",
+    "filename = folderPath + 'OnnxModel_PosRotFeaturesWithHandAndHeadModel_To_RotLocal_Normalized_NoBadFrames_Shuffled_LR1e-4_Batch16_Hidden1024_WeightDecay1e-5_Epochs6_NormalizeDataOn_Threshold10.onnx'\n",
     "ExportModelToOnnx(model, filename, X)"
    ]
   },
@@ -574,11 +575,12 @@
    "source": [
     "import onnxruntime\n",
     "\n",
-    "ort_session = onnxruntime.InferenceSession(\"D:/OnnxModel_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.onnx\")\n",
+    "ort_session = onnxruntime.InferenceSession(\"D:/OnnxModel_PosRotFeaturesWithHandAndHeadModelAndLocal_To_RotLocal_Normalized_NoBadFrames_Shuffled_LR1e-4_Batch16_Hidden1024_WeightDecay1e-5_Epochs3_NormalizeDataOn_Threshold11.onnx\")\n",
     "\n",
     "# compute ONNX Runtime output prediction\n",
     "# ort_input = {\"input\": [X[0].numpy()]}\n",
-    "X = torch.tensor(np.concatenate((dataPosRotLocalSpace.values, dataFeatures.values), axis=1), dtype=torch.float32)\n",
+    "# X = torch.tensor(np.concatenate((dataPosRotLocalSpace.values, dataFeatures.values), axis=1), dtype=torch.float32)\n",
+    "X = torch.tensor(data_input, dtype=torch.float32)\n",
     "ort_input = {\"input\": X.numpy()}\n",
     "ort_outs = ort_session.run(None, ort_input)"
    ]
@@ -621,9 +623,20 @@
    "outputs": [],
    "source": [
     "# referencePoses = np.concatenate((dataRotLocalSpace.values, dataFeatures.values), axis=1)\n",
-    "referencePoses = dataRotLocalSpace.values\n",
+    "referencePoses = dataRotLocalSpaceScaled\n",
     "# referencePoses = dataRotLocalSpace.values\n",
     "referencePoses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f56b048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refPoses = pd.DataFrame(data_input)\n",
+    "refPoses"
    ]
   },
   {
@@ -661,11 +674,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "90da62d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unnormalizedOrtOuts = rotLocalSpaceDataScaler.inverse_transform(ort_outs[0])\n",
+    "# referencePoses = np.concatenate((dataRotLocalSpace.values, dataFeatures.values), axis=1)\n",
+    "unnormalizedReferencePoses = dataRotLocalSpace.values\n",
+    "# referencePoses = dataRotLocalSpace.values\n",
+    "unnormalizedReferencePoses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa138add",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = np.empty(len(unnormalizedOrtOuts)-1)\n",
+    "for i in range(len(unnormalizedOrtOuts)-1):\n",
+    "    l1[i] = np.linalg.norm((unnormalizedOrtOuts[i] - unnormalizedReferencePoses[i + 1]), ord=1)\n",
+    "print(\"Avg L1: \" + str(np.average(l1)))\n",
+    "plt.figure(figsize=(20,10))\n",
+    "plt.plot(l1)\n",
+    "plt.show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5533da4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2 = np.empty(len(unnormalizedOrtOuts)-1)\n",
+    "for i in range(len(unnormalizedOrtOuts)-1):\n",
+    "    l2[i] = np.linalg.norm((unnormalizedOrtOuts[i] - unnormalizedReferencePoses[i + 1]))\n",
+    "print(\"Avg L2: \" + str(np.average(l2)))\n",
+    "plt.figure(figsize=(20,10))\n",
+    "plt.plot(l2)\n",
+    "plt.show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "168880f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "finalPoses = pd.DataFrame(ort_outs[0], columns=dataRotLocalSpace.columns.values)\n",
+    "finalPoses = pd.DataFrame(unnormalizedOrtOuts, columns=dataRotLocalSpace.columns.values)\n",
     "finalPoses"
    ]
   },
@@ -676,7 +735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finalPoses.to_csv(\"D:/InferencedPoses_PosRotFeaturesWithHandAndHeadLocal_To_RotLocal_Unnormalized_NoBadFrames_Shuffled_LR1e-3_Batch32_Hidden512_WeightDecay1e-5_Epochs3_NormalizeDataOff_260kRecordedONLY_Threshold4.csv\", index=False)"
+    "finalPoses.to_csv(\"D:/InferencedPoses_PosRotFeaturesWithHandAndHeadModelAndLocal_To_RotLocal_Normalized_NoBadFrames_Shuffled_LR1e-4_Batch16_Hidden1024_WeightDecay1e-5_Epochs3_NormalizeDataOn_Threshold11_UNNORMALIZED.csv\", index=False)"
    ]
   },
   {
